# Audio-Rag

./: .gitignore  README.md  evaluate_retrieval.py  main.py  pyproject.toml  requirements.txt
demo/: app.py  session.py  ui_components.py
scripts/: generate_dataset.py
src/audio_rag/: __init__.py  chunker.py  config.py  embedder.py  generator.py  judge.py  pipeline.py  retriever.py  transcriber.py
src/audio_rag/dataset_generator/: __init__.py  dataset_builder.py  manifest.py  script_builder.py  tts_engine.py
tests/: conftest.py  test_chunker.py  test_dataset_builder.py  test_embedder.py  test_evaluate_retrieval.py  test_generator.py  test_judge.py  test_manifest.py  test_pipeline.py  test_retriever.py  test_script_builder.py  test_transcriber.py  test_tts_engine.py
