[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "audio-rag"
version = "0.1.0"
description = "RAG pipeline over local audio files using Whisper, ChromaDB and Ollama"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.3",
    "sentence-transformers>=2.7.0",
    "chromadb>=0.5.0",
    "ollama>=0.2.1",
    "typer>=0.12.3",
    "torch>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
]
dataset = [
    "kokoro-onnx>=0.4.0",
    "soundfile>=0.12.0",
]

[project.scripts]
audio-rag = "main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
